--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Новый проект</title>
 <link rel="stylesheet" href="css/style.css" />
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+	<meta name="viewport" content="width=device-width">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <style>
